samples/_failures_safe/1761493070_b784ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b3c7a6c6.c: In function ‘main’:
./samples/SAFE/__tmp_b3c7a6c6.c:139:29: error: expected ‘)’ at end of input
  139 |         destroy_matrix(&mat1
      |                       ~     ^
      |                             )
./samples/SAFE/__tmp_b3c7a6c6.c:139:9: error: expected declaration or statement at end of input
  139 |         destroy_matrix(&mat1
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_b3c7a6c6.c:139:9: error: expected declaration or statement at end of input
